--- a/medios_prensa_digitales/scrapy.cfg
+++ b/medios_prensa_digitales/scrapy.cfg
@@ -3,9 +3,15 @@
 # For more information about the [deploy] section see:
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
+[scrapyd]
+application = scrapy_heroku.app.application
+
 [settings]
 default = medios_prensa_digitales.settings
 
+
 [deploy]
-#url = http://localhost:6800/
+url = http://medios-digitales-api.herokuapp.com:80/
 project = medios_prensa_digitales
+username = systemvas001@gmail.com
+password = AdminSystem10%
