settings to run with scrapyd on heroku

--- a/medios_prensa_digitales/scrapy.cfg
+++ b/medios_prensa_digitales/scrapy.cfg
@@ -11,7 +11,7 @@ default = medios_prensa_digitales.settings
 
 
 [deploy]
-#url = http://medios-digitales-api.herokuapp.com:80/
+url = http://medios-digitales-api.herokuapp.com:80/
 project = medios_prensa_digitales
-#username = systemvas001@gmail.com
-#password = AdminSystem10%
+username = systemvas001@gmail.com
+password = AdminSystem10%
